Refactors the forgot password request route
